MASTER: Fixed hidden scroll bar when the scrollable area was moved to gallery instead of transition element. (overflow unset or visible)

--- a/src/components/Gallery/style.less
+++ b/src/components/Gallery/style.less
@@ -14,6 +14,8 @@
     border-radius: 8px;
     margin: 10px;
 
+    overflow: hidden; //NOTE: Used to hide content around border radius
+
     flex: 0 0 250px;
     min-height: 450px;
 
