--- a/src/components/Sidebar/style.less
+++ b/src/components/Sidebar/style.less
@@ -4,7 +4,6 @@
   flex: 0 0 300px;
 
   background: none;
-  overflow: hidden;
 
   padding-top: 10px;
   margin-top: 20px;
@@ -18,7 +17,7 @@
     flex-flow: column nowrap;
     justify-content: flex-start;
 
-    overflow: hidden;
+    overflow: hidden; //NOTE: Used to hide content around border radius
 
     margin-bottom: 40px;
     border-radius: 8px;
